# XJHook

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/panda/xj/hook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hello.cpp  hookxj.cy.cpp  inlineHook.cpp  inlineHook.h  relocate.cpp
app/src/main/cpp/MSHook/: ARM.h  Helper.h  SubstrateStruct.h  Thumb.h  x86_64.h
app/src/main/cpp/banana/: hello.cpp
app/src/main/cpp/banana/json/: autolink.h  config.h  features.h  forwards.h  json.h  reader.h  value.h  writer.h
app/src/main/cpp/banana/lib_json/: json_batchallocator.h  json_tool.h  json_value.cpp  json_valueiterator.inl  json_writer.cpp
app/src/main/cpp/cocos/base/: CCConsole.h  CCRef.h  ccConfig.h  ccMacros.h  ccRandom.h
app/src/main/cpp/cocos/network/: HttpRequest.h  HttpResponse.h
app/src/main/cpp/cocos/platform/: CCPlatformConfig.h  CCPlatformDefine.h  CCPlatformMacros.h  CCStdC.h
app/src/main/cpp/cocos/platform/android/: CCPlatformDefine-android.h  CCStdC-android.h
app/src/main/cpp/dasixi/: hello.cpp
app/src/main/cpp/shengshi/: hello.cpp
app/src/main/java/panda/xj/hook/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/panda/xj/hook/: ExampleUnitTest.java
